Fixed creating user group before adding

--- a/DockerFile
+++ b/DockerFile
@@ -78,6 +78,7 @@ RUN apk update \
 	#&& unzip android-ndk-r12-linux-x86_64.zip \
 	#&& mv android-ndk-r12 /usr/local/android-ndk \
 	#&& rm android-ndk-r12-linux-x86_64.zip \
+	&& addgroup -g 1900 "$RUN_USER" \
 	&& id $RUN_USER || adduser -u "$RUN_UID" \
 		-g 'Build User' \
 		-s '/bin/sh' \
