--- a/DockerFile
+++ b/DockerFile
@@ -91,8 +91,9 @@ RUN apk update \
 	&& chmod -R a+rx $ANDROID_HOME $ANDROID_SDK_HOME $ANDROID_NDK_HOME \
 	&& mkdir $PROJECT && chown -R $RUN_USER:$RUN_USER $PROJECT \
 	&& echo "sdk.dir=$ANDROID_HOME" > local.properties &&  unset ANDROID_NDK_HOME \
-	&& echo y | android update sdk --filter "extra-android-m2repository" --no-ui -a \
-	&& mkdir "${ANDROID_HOME}/licenses" || true \
+	&& echo y | android update sdk --filter "extra-android-m2repository" --no-ui -a 
+
+RUN mkdir "${ANDROID_HOME}/licenses" || true \
 	&& echo "8933bad161af4178b1185d1a37fbf41ea5269c55" > "${ANDROID_HOME}/licenses/android-sdk-license" \
 	&& echo "d56f5187479451eabf01fb78af6dfcb131a6481e" >> "${ANDROID_HOME}/licenses/android-sdk-license"
 
