Changed the docker file name

--- a/DockerFile
+++ b/DockerFile
@@ -77,8 +77,9 @@ RUN apk update \
 		openjdk8="$JAVA_ALPINE_VERSION" \
 		ca-certificates wget \
 	&& [ "$JAVA_HOME" = "$(docker-java-home)" ] \
-	&& update-ca-certificates \   
-	&& wget https://dl.google.com/android/android-sdk_r24.4.1-linux.tgz \
+	&& update-ca-certificates 
+	
+RUN wget https://dl.google.com/android/android-sdk_r24.4.1-linux.tgz \
 	&& tar -xvzf android-sdk_r24.4.1-linux.tgz \
 	&& mv android-sdk-linux /usr/local/android-sdk \
 	&& rm android-sdk_r24.4.1-linux.tgz \
@@ -87,7 +88,7 @@ RUN apk update \
 	#&& unzip android-ndk-r12-linux-x86_64.zip \
 	#&& mv android-ndk-r12 /usr/local/android-ndk \
 	#&& rm android-ndk-r12-linux-x86_64.zip \
-	
+
 RUN chown -R $RUN_USER:$RUN_USER $ANDROID_HOME $ANDROID_SDK_HOME $ANDROID_NDK_HOME \
 	&& chmod -R a+rx $ANDROID_HOME $ANDROID_SDK_HOME $ANDROID_NDK_HOME \
 	&& mkdir $PROJECT && chown -R $RUN_USER:$RUN_USER $PROJECT \
